--- a/package.json
+++ b/package.json
@@ -16,11 +16,14 @@
     "chai-bignumber": "3.0.0",
     "identicon.js": "^2.3.3",
     "ipfs-api": "^26.1.2",
+    "ipfs-http-client": "^49.0.4",
     "jquery": "^3.6.0",
+    "popper.js": "^1.16.1",
     "react": "16.8.4",
     "react-bootstrap": "1.0.0-beta.5",
     "react-dom": "16.8.4",
     "react-player": "^2.9.0",
+    "react-popper": "^2.2.4",
     "react-scripts": "2.1.3",
     "truffle": "5.0.5",
     "web3": "1.0.0-beta.55"
